package modelos;
/**
 *
 * @author bryan
 */
public class Aval {
    boolean estado;
    String area;
    int anniosDeExperiencia;
    int tiempoDeValidez;
}
