package modelos;
/**
 *
 * @author bryan
 */
public class CartaDeCompromiso {
    String compromisos;
}
