package modelos;
/**
 *
 * @author bryan
 */
public class CartaDeIntencion {
    String cursosAprobados;
    String finesDeLucro;
}
