package modelos;

import java.util.ArrayList;

/**
 *
 * @author bryan
 */
public class Cohorte {
    int annioDeIngreso;
    ArrayList <Persona> inscritos;
}
