package modelos;
/**
 *
 * @author bryan
 */
public class EnteValidador {
    String nombre;
    String competencias;
    int tiempoDeValidacion;
        public static boolean evaluarPropuestaDeDiplomado(){
            return false;
        }
        public static boolean evaluarPropuesta(){
            return false;
        }
}
