package modelos;
/**
 *
 * @author bryan
 */
public class EstructuraDeCosto {
   int porcentajeDeLucro;
   int costosAsociados;
}
