package modelos;
/**
 *
 * @author bryan
 */
public class FormulacionDeCurso {
    String denominacion;
    String objetivos;
    String fundamentacion;
    String perfilIngresoYEgreso;
    String perfilDocente;
    String estrategiaDeEvaluacion;
    String materialesYServicios;
    int duracion;
    EstructuraDeCosto costos;
    String cronogramaAnual;
}
