package modelos;

/**
 *
 * @author bryan
 */
public class PersonaJuridica extends Persona{
    int islr;
    int cedulaRepresentante;
    String registroMercantil;
}
