package modelos;
/**
 *
 * @author bryan
 */
public class Usuario extends Persona{
    int ID;
    String rol;
    String correo;
    String clave;
    String registro;
        public static void registrarCurso(){}
        public static void modificarInformacion(){}
        public static void registrarse(){}
        public static void ingresar(){}

}
